--- a/components/icyujf18g-python/overlays/development/deployment-patch.yaml
+++ b/components/icyujf18g-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: icyujf18g-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-1d3a1fe343.uvwm.p3.openshiftapps.com/rhtap/rhtap-qe:aba716f007cd77192b1238f7926576b830a96531@sha256:45ad4ab37cfabb1894b6559b780d014057169ac726f6dd06b836926af0b7e68b
+          name: container-image
